--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.3.1",
     "easy-template-x": "^7.2.2",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
