--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "clsx": "^2.1.1",
     "dotenv": "^17.3.1",
     "easy-template-x": "^7.2.2",
+    "framer-motion": "^12.34.3",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "openai": "^6.21.0",
+    "pdf-parse": "^2.4.5",
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
