FIX: Add vercel.json to root for cron jobs

--- a/vercel.json
+++ b/vercel.json
@@ -8,5 +8,6 @@
             "path": "/api/cron/score",
             "schedule": "15 * * * *"
         }
-    ]
+    ],
+    "description": "Cron setup"
 }
