--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,11 @@
     "crons": [
         {
             "path": "/api/scrape",
-            "schedule": "0 * * * *"
+            "schedule": "0 0 * * *"
         },
         {
             "path": "/api/cron/score",
-            "schedule": "15 * * * *"
+            "schedule": "0 1 * * *"
         }
     ]
 }
