refactor(ingestion): initialize radar scanning architecture, rename xray to scan, purge test scripts

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "crons": [
         {
-            "path": "/api/scrape",
+            "path": "/api/radar/scan",
             "schedule": "0 0 * * *"
         },
         {
