feat(ingestion): implement two-phase scout & architect architecture with raw queue to permanently eliminate vercel timeouts

--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,15 @@
     "crons": [
         {
             "path": "/api/radar/scan",
-            "schedule": "0 0 * * *"
+            "schedule": "0 8 * * *"
+        },
+        {
+            "path": "/api/radar/refine",
+            "schedule": "*/10 * * * *"
         },
         {
             "path": "/api/cron/score",
-            "schedule": "0 1 * * *"
+            "schedule": "0 9 * * *"
         }
     ]
 }
